--- a/haushaltsbuch-app/src/app/app.component.html
+++ b/haushaltsbuch-app/src/app/app.component.html
@@ -1,49 +1,65 @@
-<mat-sidenav-container class="demo-root" fullscreen>
-    <mat-sidenav #start>
+
+<td-layout>
+    <td-navigation-drawer flex icon="account_balance" sidenavTitle="Haushaltsbuch" name="Matthias Haschka" email="matthias.haschka@me.com">
         <mat-nav-list>
-            <a *ngFor="let navItem of navItems"
-               mat-list-item
-               (click)="start.close()"
-               routerLinkActive
-               #routerLinkActiveInstance="routerLinkActive"
-               [attr.tabindex]="routerLinkActiveInstance.isActive ? 0 : -1"
-               [routerLink]="[navItem.route]">
-                {{navItem.name}}
-            </a>
-
-            <hr>
-
-            <a mat-list-item
-               tabindex="-1"
-               (click)="start.close()"
-               [routerLink]="['/baseline']">
-                Baseline
-            </a>
+            <ng-template let-item let-last="last" ngFor [ngForOf]="routes">
+                <a mat-list-item (click)="layout.close()"><mat-icon>{{item.icon}}</mat-icon>{{item.title}}</a>
+            </ng-template>
         </mat-nav-list>
-        <button mat-button tabindex="-1" (click)="start.close()">CLOSE</button>
-    </mat-sidenav>
-    <div>
-        <mat-toolbar color="primary">
-            <button mat-icon-button (click)="start.open()">
+        <mat-nav-list td-navigation-drawer-menu>
+            <a mat-list-item (click)="logout()"><mat-icon>exit_to_app</mat-icon>Sign out</a>
+        </mat-nav-list>
+    </td-navigation-drawer>
+    <td-layout-nav navigationRoute="/">
+        <div td-toolbar-content layout="row" layout-align="start center" flex>
+            <button mat-icon-button td-menu-button tdLayoutToggle>
                 <mat-icon>menu</mat-icon>
             </button>
-            <div class="demo-toolbar">
-                <h1>Angular Material Demos</h1>
-                <div>
-                    <button mat-icon-button (click)="toggleFullscreen()" title="Toggle fullscreen">
-                        <mat-icon>fullscreen</mat-icon>
-                    </button>
-                    <button mat-button (click)="toggleTheme()">{{dark ? 'Light' : 'Dark'}} theme</button>
-                    <button mat-button (click)="root.dir = (root.dir == 'rtl' ? 'ltr' : 'rtl')" title="Toggle between RTL and LTR">
-                        {{root.dir.toUpperCase()}}
-                    </button>
-                </div>
-            </div>
-        </mat-toolbar>
-
-        <div #root="dir" dir="ltr" class="demo-content">
-            <h1>Haushaltsbuch App</h1>
-            <router-outlet></router-outlet>
+            <mat-icon class="mat-icon-logo cursor-pointer">account_balance</mat-icon>
+            <span class="cursor-pointer ">Haushaltsbuch</span>
+            <span flex></span>
+            <button mat-icon-button [matMenuTriggerFor]="notificationsMenu">
+                <td-notification-count color="accent" [notifications]="12">
+                    <mat-icon>notifications</mat-icon>
+                </td-notification-count>
+            </button>
+            <mat-menu #notificationsMenu="matMenu">
+                <td-menu>
+                    <div td-menu-header class="mat-subhead">Job Openings</div>
+                    <mat-nav-list dense>
+                        <a mat-list-item>
+                            <mat-icon mat-list-avatar>fiber_new</mat-icon>
+                            <h4 mat-line><span class="text-wrap">Sr. Frontend Engineer</span></h4>
+                            <p mat-line>UX team</p>
+                        </a>
+                        <mat-divider></mat-divider>
+                        <a mat-list-item>
+                            <mat-icon mat-list-avatar>fiber_new</mat-icon>
+                            <h4 mat-line><span class="text-wrap">Sr. Data Scientist</span></h4>
+                            <p mat-line>Data science team</p>
+                        </a>
+                        <mat-divider></mat-divider>
+                        <a mat-list-item>
+                            <mat-icon mat-list-avatar>fiber_new</mat-icon>
+                            <h4 mat-line><span class="text-wrap">Sr. DevOps Engineer</span></h4>
+                            <p mat-line>DevOps team</p>
+                        </a>
+                    </mat-nav-list>
+                    <a mat-button color="accent" td-menu-footer>
+                        View Jobs
+                    </a>
+                </td-menu>
+            </mat-menu>            
+            <a mat-icon-button matTooltip="Docs" href="https://teradata.github.io/covalent/" target="_blank"><mat-icon>chrome_reader_mode</mat-icon></a>
         </div>
-    </div>
-</mat-sidenav-container>
+
+        <router-outlet></router-outlet>
+
+        <td-layout-footer>
+            <div layout="row" layout-align="start center">
+                <span class="mat-caption">Copyright &copy; 2017 Teradata. All rights reserved</span>
+            </div>
+        </td-layout-footer>
+
+    </td-layout-nav>
+</td-layout>
