--- a/haushaltsbuch-app/src/app/app.component.html
+++ b/haushaltsbuch-app/src/app/app.component.html
@@ -1,13 +1,17 @@
-
 <td-layout>
-    <td-navigation-drawer flex icon="account_balance" sidenavTitle="Haushaltsbuch" name="Matthias Haschka" email="matthias.haschka@me.com">
+    <td-navigation-drawer flex icon="account_balance" sidenavTitle="Haushaltsbuch"
+                          name="Matthias Haschka" email="matthias.haschka@me.com">
         <mat-nav-list>
             <ng-template let-item let-last="last" ngFor [ngForOf]="routes">
-                <a mat-list-item (click)="layout.close()"><mat-icon>{{item.icon}}</mat-icon>{{item.title}}</a>
+                <a mat-list-item (click)="layout.close()">
+                    <mat-icon>{{item.icon}}</mat-icon>
+                    {{item.title}}</a>
             </ng-template>
         </mat-nav-list>
         <mat-nav-list td-navigation-drawer-menu>
-            <a mat-list-item (click)="logout()"><mat-icon>exit_to_app</mat-icon>Sign out</a>
+            <a mat-list-item (click)="logout()">
+                <mat-icon>exit_to_app</mat-icon>
+                Sign out</a>
         </mat-nav-list>
     </td-navigation-drawer>
     <td-layout-nav navigationRoute="/">
@@ -49,8 +53,11 @@
                         View Jobs
                     </a>
                 </td-menu>
-            </mat-menu>            
-            <a mat-icon-button matTooltip="Docs" href="https://teradata.github.io/covalent/" target="_blank"><mat-icon>chrome_reader_mode</mat-icon></a>
+            </mat-menu>
+            <a mat-icon-button matTooltip="Docs" href="https://teradata.github.io/covalent/"
+               target="_blank">
+                <mat-icon>chrome_reader_mode</mat-icon>
+            </a>
         </div>
 
         <router-outlet></router-outlet>
