Serialisierung der Wertobjekte

--- a/haushaltsbuch-app/src/app/home/home.component.html
+++ b/haushaltsbuch-app/src/app/home/home.component.html
@@ -12,7 +12,7 @@
                     ihrer privaten Finanzen. Erhalten Sie ein Vorhersage zu Ihrer
                     Vermögensentwicklung anhand
                     ihrer Ein- und Ausgaben.</p>
-                <button mat-raised-button color="accent" [routerLink]="['inventur']"
+                <button id='ausprobieren' mat-raised-button color="accent" [routerLink]="['inventur']"
                         class="push-bottom mat-button-lg text-upper">Jetzt ausprobieren
                 </button>
             </div>
