--- a/haushaltsbuch-app/src/app/inventur/inventur.component.html
+++ b/haushaltsbuch-app/src/app/inventur/inventur.component.html
@@ -1,5 +1,6 @@
 <mat-card>
-    <mat-card-title>Inventur</mat-card-title>
+    <h4 id="title456">Meine Inventur</h4>
+    <mat-card-title id="title123">Inventur</mat-card-title>
     <mat-card-content>
         <p>Erfassen Sie alle Vermögenswerte und Schulden. Das Inventar wird benötigt, um
         mit der Haushaltsbuchführung zu beginnen.</p>
