--- a/frontend/src/main/src/app/app.component.html
+++ b/frontend/src/main/src/app/app.component.html
@@ -64,7 +64,9 @@
 
         <td-layout-footer>
             <div layout="row" layout-align="start center">
-                <span class="mat-caption">Copyright &copy; 2017 Teradata. All rights reserved</span>
+                <span class="mat-caption">Copyright &copy; 2017 Teradata. All rights reserved
+                    Version {{(version$ | async)}}
+                </span>
             </div>
         </td-layout-footer>
 
