--- a/frontend/src/main/src/app/app.component.html
+++ b/frontend/src/main/src/app/app.component.html
@@ -1,5 +1,5 @@
 <td-layout>
-    <td-navigation-drawer flex icon="account_balance" sidenavTitle="Haushaltsbuch"
+    <td-navigation-drawer flex icon="account_balance" sidenavTitle=".:Haushaltsbuch:."
                           name="Matthias Haschka" email="matthias.haschka@me.com">
         <mat-nav-list>
             <ng-template let-item let-last="last" ngFor [ngForOf]="routes">
@@ -20,7 +20,7 @@
                 <mat-icon>menu</mat-icon>
             </button>
             <mat-icon class="mat-icon-logo cursor-pointer">account_balance</mat-icon>
-            <span class="cursor-pointer ">Haushaltsbuch</span>
+            <span class="cursor-pointer ">.:Haushaltsbuch:.</span>
             <span flex></span>
             <button mat-icon-button [matMenuTriggerFor]="notificationsMenu">
                 <td-notification-count color="accent" [notifications]="12">
