Verbesserung des Command Gateways

--- a/frontend/src/main/src/app/app.component.html
+++ b/frontend/src/main/src/app/app.component.html
@@ -60,6 +60,7 @@
             </a>
         </div>
 
+        <app-command-progress></app-command-progress>
         <router-outlet></router-outlet>
 
         <td-layout-footer>
