--- a/frontend/src/main/src/app/inventur/gruppe/posten/posten.component.html
+++ b/frontend/src/main/src/app/inventur/gruppe/posten/posten.component.html
@@ -7,7 +7,7 @@
                required>
     </mat-form-field>
 
-    <ng-container [formGroup]="posten.get('waehrungsbetrag')">
+    <ng-container [formGroup]="posten.get('währungsbetrag')">
         <mat-form-field flex="20">
             <input matInput
                    placeholder="Betrag" type="text" name="betrag"
@@ -16,8 +16,8 @@
 
         <mat-form-field flex="20">
             <input matInput
-                   placeholder="Währung" type="text" name="waehrung"
-                   maxlength="3" minlength="3" formControlName="waehrung" required>
+                   placeholder="Währung" type="text" name="äehrung"
+                   maxlength="3" minlength="3" formControlName="währung" required>
         </mat-form-field>
     </ng-container>
 
