Aufgeräumt und Tests wieder zum Laufen gebracht

--- a/frontend/src/main/src/app/home/home.component.html
+++ b/frontend/src/main/src/app/home/home.component.html
@@ -1,5 +1,4 @@
-<section class="bgc-blue-grey-50"
-         style="background: url('http://lorempixel.com/1200/800/city') no-repeat; background-size: cover; background-blend-mode: screen">
+<section class="bgc-blue-grey-50">
     <div layout-gt-xs="row">
         <div flex class="pad" tdMediaToggle="gt-xs" [mediaClasses]="['pad-xl']">
             <div class="push-top-xl" hide-xs></div>
