Zwischenstand Query Gateway & Stepper

--- a/frontend/src/main/src/app/inventur/gruppe/gruppe.component.html
+++ b/frontend/src/main/src/app/inventur/gruppe/gruppe.component.html
@@ -5,7 +5,7 @@
                            layout="row" layout-padding>
     </app-inventur-position>
 
-    <button mat-mini-fab type="button" (click)="hinzufuegen()">
+    <button mat-mini-fab type="button" (click)="hinzufuegen()" style="position: absolute; right: 0; bottom: 0">
         <mat-icon aria-label="Inventarposition hinzufügen">add</mat-icon>
     </button>
 </div>
