--- a/frontend/src/main/src/app/inventur/inventar/inventar.component.html
+++ b/frontend/src/main/src/app/inventur/inventar/inventar.component.html
@@ -1,4 +1,21 @@
-<h2>Anlagevermögen</h2>
-<h2>Umlaufvermögen</h2>
-<h2>Schulden</h2>
+<h2>I. Anlagevermögen</h2>
+    <ol>
+        <li *ngFor="let position of inventar.anlagevermoegen">
+            {{position.position}} {{position.waehrungsbetrag}}
+        </li>
+    </ol>
+<h2>II. Umlaufvermögen</h2>
+<ol>
+    <li *ngFor="let position of inventar.umlaufvermoegen">
+        {{position.position}} {{position.waehrungsbetrag}}
+    </li>
+</ol>
+
+<h2>III. Schulden</h2>
+<ol>
+    <li *ngFor="let position of inventar.schulden">
+        {{position.position}} {{position.waehrungsbetrag}}
+    </li>
+</ol>
+
 
