--- a/frontend/src/main/src/app/inventur/inventur.component.html
+++ b/frontend/src/main/src/app/inventur/inventur.component.html
@@ -1,29 +1,50 @@
 <mat-card>
-    <h4 id="title456">Meine Inventur</h4>
     <mat-card-title id="title123">Inventur</mat-card-title>
     <mat-card-content>
         <p>Erfassen Sie alle Vermögenswerte und Schulden. Das Inventar wird benötigt, um
-        mit der Haushaltsbuchführung zu beginnen.</p>
+            mit der Haushaltsbuchführung zu beginnen.</p>
+
         <form [formGroup]="inventur" (ngSubmit)="speichern()">
-            <div layout="column" class="pad">
-                <app-inventur-gruppe [positionen]="anlagevermoegen">
-                    <h3 titel>I. Anlagevermögen</h3>
-                </app-inventur-gruppe>
-
-                <app-inventur-gruppe [positionen]="umlaufvermoegen">
-                    <h3>II. Umlaufvermögen</h3>
-                </app-inventur-gruppe>
-
-                <app-inventur-gruppe [positionen]="schulden">
-                    <h3>III. Schulden</h3>
-                </app-inventur-gruppe>
-            </div>
-            <div>
-                <button color="primary" mat-raised-button [disabled]="inventur?.invalid">
-                    Inventur beenden
-                </button>
-            </div>
-
+            <mat-horizontal-stepper linear>
+                <mat-step label="Anlagevermögen" formGroupName="anlagevermoegen"
+                          [stepControl]="anlagevermoegen">
+                    <app-inventur-gruppe [positionen]="anlagevermoegen">
+                    </app-inventur-gruppe>
+                    <div>
+                        <button mat-button matStepperNext [disabled]="anlagevermoegen.invalid">
+                            Weiter
+                        </button>
+                    </div>
+                </mat-step>
+                <mat-step label="Umlaufvermögen">
+                    <app-inventur-gruppe [positionen]="umlaufvermoegen">
+                    </app-inventur-gruppe>
+                    <div>
+                        <button mat-button matStepperPrevious>Zurück</button>
+                        <button mat-button matStepperNext [disabled]="umlaufvermoegen.invalid">
+                            Weiter
+                        </button>
+                    </div>
+                </mat-step>
+                <mat-step label="Schulden">
+                    <app-inventur-gruppe [positionen]="schulden">
+                    </app-inventur-gruppe>
+                    <div>
+                        <button mat-button matStepperPrevious>Zurück</button>
+                        <button mat-button matStepperNext [disabled]="schulden.invalid">Weiter
+                        </button>
+                    </div>
+                </mat-step>
+                <mat-step label="Inventur abschließen">
+                    <app-inventar [inventar]="(inventar$ | async)"></app-inventar>
+                    <div>
+                        <button mat-button matStepperPrevious>Zurück</button>
+                        <button mat-raised-button color="primary" [disabled]="inventur?.invalid">
+                            Inventur abschließen
+                        </button>
+                    </div>
+                </mat-step>
+            </mat-horizontal-stepper>
         </form>
     </mat-card-content>
 </mat-card>
