Zwischenstand Query Gateway & Stepper

--- a/frontend/src/main/src/app/app.component.html
+++ b/frontend/src/main/src/app/app.component.html
@@ -61,6 +61,7 @@
         </div>
 
         <app-command-progress></app-command-progress>
+        <app-query-progress></app-query-progress>
         <router-outlet></router-outlet>
 
         <td-layout-footer>
