--- a/frontend/src/main/src/app/shared/query-gateway/query-error/query-error.component.html
+++ b/frontend/src/main/src/app/shared/query-gateway/query-error/query-error.component.html
@@ -1,3 +1,10 @@
-<mat-card>
-  ERROR
-</mat-card>
+<div class="text-center leeres-inventar">
+    <p>Das Inventarverzeichnis ist derzeit nicht verfügbar.</p>
+ <div>
+    <button type="button" mat-button color="primary">Erneut Versuchen</button>
+ </div>
+</div>
+
+<div style="background-repeat: no-repeat;background-attachment: fixed;background-position: center; ">
+
+</div>
