dominium-22 Besser Darstellung des Hinzufügen Buttons bei der Inventur

--- a/ui/frontend/src/main/src/app/inventur/inventar/inventar.component.html
+++ b/ui/frontend/src/main/src/app/inventur/inventar/inventar.component.html
@@ -37,9 +37,8 @@
             </li>
         </ol>
 
-        <td-json-formatter [data]="(inventar$ | async)"></td-json-formatter>
         <mat-card-actions>
-            <button mat-button (click)="haushaltsbuchAnlegen()">HAUSHALTSBUCH ANLEGEN</button>
+            <button mat-button color="primary" (click)="haushaltsbuchAnlegen()">HAUSHALTSBUCH ANLEGEN</button>
             <button mat-button (click)="inventurWiederholen()">INVENTUR WIEDERHOLEN</button>
         </mat-card-actions>
     </mat-card-content>
