Link zur API Dokumentation

--- a/ui/frontend/src/main/src/app/app.component.html
+++ b/ui/frontend/src/main/src/app/app.component.html
@@ -7,6 +7,10 @@
                     <mat-icon>{{item.icon}}</mat-icon>
                     {{item.title}}</a>
             </ng-template>
+            <a mat-list-item href="/swagger-ui.html">
+                <mat-icon>star</mat-icon>
+                API
+            </a>
         </mat-nav-list>
         <mat-nav-list td-navigation-drawer-menu>
             <a mat-list-item (click)="logout()">
