dominium-37 Buttons nicht ausschließlich mit Großbuchstaben im HTML Template schreiben

--- a/ui/frontend/src/main/src/app/inventur/inventar/inventar.component.html
+++ b/ui/frontend/src/main/src/app/inventur/inventar/inventar.component.html
@@ -38,8 +38,8 @@
         </ol>
 
         <mat-card-actions>
-            <button mat-button color="primary" (click)="haushaltsbuchAnlegen()">HAUSHALTSBUCH ANLEGEN</button>
-            <button mat-button (click)="inventurWiederholen()">INVENTUR WIEDERHOLEN</button>
+            <button mat-button color="primary" (click)="haushaltsbuchAnlegen()">Haushaltsbuch anlegen</button>
+            <button mat-button (click)="inventurWiederholen()">Inventur wiederholen</button>
         </mat-card-actions>
     </mat-card-content>
 </mat-card>
