--- a/ui/frontend/src/main/src/app/inventur/gruppe/posten/posten.component.html
+++ b/ui/frontend/src/main/src/app/inventur/gruppe/posten/posten.component.html
@@ -2,7 +2,7 @@
     <mat-form-field flex>
         <input matInput placeholder="Position"
                type="text" name="position" formControlName="position"
-               required>
+               required appAutofocus>
     </mat-form-field>
 
     <ng-container [formGroup]="posten.get('waehrungsbetrag')">
