--- a/ui/frontend/src/main/src/app/inventur/inventur.component.html
+++ b/ui/frontend/src/main/src/app/inventur/inventur.component.html
@@ -1,4 +1,4 @@
-<mat-card (keydown)="tastatureingabe($event)" appAutofocus>
+<mat-card>
     <mat-card-title id="title123">Inventur</mat-card-title>
     <mat-card-content>
         <p>Bevor Sie mit der Haushaltsbuchführung beginnen können müssen Sie eine Inventur
@@ -44,6 +44,8 @@
         </form>
     </mat-card-content>
     <button color="primary" mat-mini-fab type="button" (click)="hinzufuegen()"
+            [disabled]="inventur?.invalid"
+            matTooltip="Inventur-Position hinzufügen. Drücken Sie auch '+' auf der Tastatur."
             style="position: fixed; right: 20px; bottom: 20px">
         <mat-icon aria-label="Inventarposition hinzufügen">add</mat-icon>
     </button>
